<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/new_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/btn_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/aquamarine"
        android:gravity="center"
        android:text="@string/btn_photo" />

    <!-- 最好添加一个滑动栏 -->

    <EditText
        android:id="@+id/txt_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:hint="@string/txt_info" />

    <Button
        android:id="@+id/btn_maker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/aquamarine"
        android:gravity="center"
        android:text="@string/btn_maker"
        android:visibility="invisible" />

   
</LinearLayout>